--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.2.1",
+    "axios": "^1.13.5",
     "daisyui": "^5.5.19",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
